--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 /public/build
 /public/hot
 /public/storage
-/public/css/app.css
-/public/js/app.js
+/public/css/*
+/public/js/*
 /storage/*.key
 /vendor
 composer.lock
